Update and rename X si O.html to X and 0.html

--- a/X and 0.html
+++ b/X and 0.html
@@ -1,8 +1,8 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>X si 0</title>
-    <script src="C:\Users\valer\OneDrive\Desktop\studio\X si O.js"> </script>
+    <title>X and 0</title>
+    <script src="C:\Users\valer\OneDrive\Desktop\studio\X and 0.js"> </script>
     <style>
       canvas {
         border: 1px solid black;
